delete unused images service added
