# back/swagger_output.json
@@ -1238,6 +1238,30 @@
         }
       }
     },
+    "/images-checkeditor/delete-unused": {
+      "delete": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "urls": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/shopping": {
       "get": {
         "description": "",
